2023-09-02  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-get-completion-methods): Make MULTI-HOP optional.

2023-09-01  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-completion-multi-hop-methods): Fix :type.
	Add ;;;###tramp-autoload cookie.

	* tramp-container.el (tramp-completion-multi-hop-methods):
	Add methods properly.

2023-08-31  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-completion-multi-hop-methods): Adapt docstring.
	Use nil as initial value.

	* tramp-container.el (tramp-completion-multi-hop-methods):
	Add "docker" and "podman".

2023-08-31  Gene Goykhman  <gene@indigo1.com>

	* tramp.el: Add custom variable `tramp-container-multi-hop-methods'.

	* tramp-container.el: Check if METHOD is a member of
	`tramp-container-multi-hop-methods' before attempting completion.

2023-08-29  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp--last-hop-directory): Adapt docstring.  Move down.
	(tramp-set-completion-function): Revert default case to
	`file-exists-p', the workaround isn't needed anymore.
	(tramp-get-completion-methods): Rename argument to MULTI-HOP.
	(tramp-completion-remote-containers): Add :version.
	(tramp-multi-hop-p): Bind `tramp-verbose' to nil.
	(tramp-accept-process-output): Use `with-tramp-suspended-timers'
	also for the other processes.

	* tramp-container.el (tramp-container--completion-function):
	Use METHOD as argument, instead of PROGRAM.  Determine program
	from METHOD entry in `tramp-methods'.  Bind `non-essential' to
	nil.  Use a file property as cache.
	(tramp-container--completion-function): Use adapted arguments when
	setting for "docker" and "podman".

2023-08-29  Gene Goykhman  <gene@indigo1.com>

	* tramp.el (tramp--last-hop-directory): Add new variable.
	(tramp-completion-handle-file-name-all-completions): Use container
	host directory to execute container program on remote host.
	(tramp-set-completion-function): FIXME: for now, don't constrain